// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/accounts DELETE /:accountId/logo should return account with logo as null 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "address": "62954242-3652-4792-bae5-5bfed53d37b7",
        "addressId": "62954242-3652-4792-bae5-5bfed53d37b7",
        "autoRespondOutsideOfficeHoursLimit": null,
        "bookingWidgetPrimaryColor": null,
        "bufferAfterClosing": null,
        "bufferBeforeOpening": null,
        "bumpInterval": "2 weeks",
        "callrailId": null,
        "canAutoRespondOutsideOfficeHours": false,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "cellPhoneNumberFallback": Array [
          "mobilePhoneNumber",
          "otherPhoneNumber",
          "homePhoneNumber",
        ],
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "fullLogoUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "isChairSchedulingEnabled": false,
        "lastReviewInterval": "1 years",
        "lastSentReviewInterval": "1 months",
        "lastSyncDate": null,
        "logo": null,
        "massOnlineEmailSentDate": null,
        "name": "Test Account",
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "phoneNumber": null,
        "recallBuffer": "1 days",
        "recallEndTime": "20:00:00",
        "recallInterval": "6 months",
        "recallStartTime": "17:00:00",
        "reviewsInterval": "15 minutes",
        "sendRequestEmail": true,
        "sendUnconfirmedReviews": false,
        "suggestedChairId": null,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": "+16043333333",
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
        "weeklyScheduleId": null,
      },
    },
    "addresses": Object {
      "62954242-3652-4792-bae5-5bfed53d37b7": Object {
        "city": null,
        "country": "CA",
        "id": "62954242-3652-4792-bae5-5bfed53d37b7",
        "state": null,
        "street": null,
        "timezone": null,
        "zipCode": null,
      },
    },
  },
  "result": "62954241-3652-4792-bae5-5bfed53d37b7",
}
`;

exports[`/api/accounts GET / with manager role so only return one 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "address": "62954242-3652-4792-bae5-5bfed53d37b7",
        "addressId": "62954242-3652-4792-bae5-5bfed53d37b7",
        "autoRespondOutsideOfficeHoursLimit": null,
        "bookingWidgetPrimaryColor": null,
        "bufferAfterClosing": null,
        "bufferBeforeOpening": null,
        "bumpInterval": "2 weeks",
        "callrailId": null,
        "canAutoRespondOutsideOfficeHours": false,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "cellPhoneNumberFallback": Array [
          "mobilePhoneNumber",
          "otherPhoneNumber",
          "homePhoneNumber",
        ],
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "fullLogoUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "isChairSchedulingEnabled": false,
        "lastReviewInterval": "1 years",
        "lastSentReviewInterval": "1 months",
        "lastSyncDate": null,
        "logo": null,
        "massOnlineEmailSentDate": null,
        "name": "Test Account",
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "phoneNumber": null,
        "recallBuffer": "1 days",
        "recallEndTime": "20:00:00",
        "recallInterval": "6 months",
        "recallStartTime": "17:00:00",
        "reviewsInterval": "15 minutes",
        "sendRequestEmail": true,
        "sendUnconfirmedReviews": false,
        "suggestedChairId": null,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": "+16043333333",
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
        "weeklyScheduleId": null,
      },
    },
    "addresses": Object {
      "62954242-3652-4792-bae5-5bfed53d37b7": Object {
        "city": null,
        "country": "CA",
        "id": "62954242-3652-4792-bae5-5bfed53d37b7",
        "state": null,
        "street": null,
        "timezone": null,
        "zipCode": null,
      },
    },
  },
  "result": Array [
    "62954241-3652-4792-bae5-5bfed53d37b7",
  ],
}
`;

exports[`/api/accounts GET / with owner role so return all 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "52954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "address": "62954241-3652-4792-bae5-5bfed53d37b7",
        "addressId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "autoRespondOutsideOfficeHoursLimit": null,
        "bookingWidgetPrimaryColor": null,
        "bufferAfterClosing": null,
        "bufferBeforeOpening": null,
        "bumpInterval": "2 weeks",
        "callrailId": null,
        "canAutoRespondOutsideOfficeHours": false,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "cellPhoneNumberFallback": Array [
          "mobilePhoneNumber",
          "otherPhoneNumber",
          "homePhoneNumber",
        ],
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": null,
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "fullLogoUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "52954241-3652-4792-bae5-5bfed53d37b7",
        "isChairSchedulingEnabled": false,
        "lastReviewInterval": "1 years",
        "lastSentReviewInterval": "1 months",
        "lastSyncDate": null,
        "logo": null,
        "massOnlineEmailSentDate": null,
        "name": "Test Account 2",
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "phoneNumber": null,
        "recallBuffer": "1 days",
        "recallEndTime": "20:00:00",
        "recallInterval": "6 months",
        "recallStartTime": "17:00:00",
        "reviewsInterval": "15 minutes",
        "sendRequestEmail": true,
        "sendUnconfirmedReviews": false,
        "suggestedChairId": null,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": null,
        "twilioPhoneNumber": null,
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
        "weeklyScheduleId": null,
      },
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "address": "62954242-3652-4792-bae5-5bfed53d37b7",
        "addressId": "62954242-3652-4792-bae5-5bfed53d37b7",
        "autoRespondOutsideOfficeHoursLimit": null,
        "bookingWidgetPrimaryColor": null,
        "bufferAfterClosing": null,
        "bufferBeforeOpening": null,
        "bumpInterval": "2 weeks",
        "callrailId": null,
        "canAutoRespondOutsideOfficeHours": false,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "cellPhoneNumberFallback": Array [
          "mobilePhoneNumber",
          "otherPhoneNumber",
          "homePhoneNumber",
        ],
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "fullLogoUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "isChairSchedulingEnabled": false,
        "lastReviewInterval": "1 years",
        "lastSentReviewInterval": "1 months",
        "lastSyncDate": null,
        "logo": null,
        "massOnlineEmailSentDate": null,
        "name": "Test Account",
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "phoneNumber": null,
        "recallBuffer": "1 days",
        "recallEndTime": "20:00:00",
        "recallInterval": "6 months",
        "recallStartTime": "17:00:00",
        "reviewsInterval": "15 minutes",
        "sendRequestEmail": true,
        "sendUnconfirmedReviews": false,
        "suggestedChairId": null,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": "+16043333333",
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
        "weeklyScheduleId": null,
      },
    },
    "addresses": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "city": null,
        "country": "CA",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "state": null,
        "street": null,
        "timezone": null,
        "zipCode": null,
      },
      "62954242-3652-4792-bae5-5bfed53d37b7": Object {
        "city": null,
        "country": "CA",
        "id": "62954242-3652-4792-bae5-5bfed53d37b7",
        "state": null,
        "street": null,
        "timezone": null,
        "zipCode": null,
      },
    },
  },
  "result": Array [
    "62954241-3652-4792-bae5-5bfed53d37b7",
    "52954241-3652-4792-bae5-5bfed53d37b7",
  ],
}
`;

exports[`/api/accounts GET /:accountId get the account data 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "address": "62954242-3652-4792-bae5-5bfed53d37b7",
        "addressId": "62954242-3652-4792-bae5-5bfed53d37b7",
        "autoRespondOutsideOfficeHoursLimit": null,
        "bookingWidgetPrimaryColor": null,
        "bufferAfterClosing": null,
        "bufferBeforeOpening": null,
        "bumpInterval": "2 weeks",
        "callrailId": null,
        "canAutoRespondOutsideOfficeHours": false,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "cellPhoneNumberFallback": Array [
          "mobilePhoneNumber",
          "otherPhoneNumber",
          "homePhoneNumber",
        ],
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "fullLogoUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "isChairSchedulingEnabled": false,
        "lastReviewInterval": "1 years",
        "lastSentReviewInterval": "1 months",
        "lastSyncDate": null,
        "logo": null,
        "massOnlineEmailSentDate": null,
        "name": "Test Account",
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "phoneNumber": null,
        "recallBuffer": "1 days",
        "recallEndTime": "20:00:00",
        "recallInterval": "6 months",
        "recallStartTime": "17:00:00",
        "reviewsInterval": "15 minutes",
        "sendRequestEmail": true,
        "sendUnconfirmedReviews": false,
        "suggestedChairId": null,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": "+16043333333",
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
        "weeklyScheduleId": null,
      },
    },
    "addresses": Object {
      "62954242-3652-4792-bae5-5bfed53d37b7": Object {
        "city": null,
        "country": "CA",
        "id": "62954242-3652-4792-bae5-5bfed53d37b7",
        "state": null,
        "street": null,
        "timezone": null,
        "zipCode": null,
      },
    },
  },
  "result": "62954241-3652-4792-bae5-5bfed53d37b7",
}
`;

exports[`/api/accounts GET /:accountId/OfficeHour when office hour exists 1`] = `
Object {
  "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "createdAt": "2017-07-19T00:14:30.932Z",
  "deletedAt": null,
  "entities": Object {},
  "friday": null,
  "fridayId": null,
  "id": "3330f60a-ec83-431f-a67e-28142ab43caa",
  "isAdvanced": false,
  "monday": Object {
    "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
    "breaks": Array [],
    "chairIds": Array [],
    "createdAt": "2017-07-19T00:14:30.932Z",
    "date": "2019-08-08",
    "deletedAt": null,
    "endTime": "1970-02-01T01:00:00.000Z",
    "id": "8f698c5b-d4a2-4550-a6dc-1942e068d930",
    "isClosed": false,
    "pmsId": null,
    "practitionerId": null,
    "startTime": "1970-01-31T16:00:00.000Z",
  },
  "mondayId": "8f698c5b-d4a2-4550-a6dc-1942e068d930",
  "pmsId": null,
  "saturday": null,
  "saturdayId": null,
  "startDate": null,
  "sunday": null,
  "sundayId": null,
  "thursday": null,
  "thursdayId": null,
  "tuesday": null,
  "tuesdayId": null,
  "wednesday": null,
  "wednesdayId": null,
  "weeklySchedules": null,
}
`;

exports[`/api/accounts GET /:accountId/OfficeHour when office hour exists 2`] = `
Object {
  "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "createdAt": "2017-07-19T00:14:30.932Z",
  "deletedAt": null,
  "entities": Object {},
  "friday": null,
  "fridayId": null,
  "id": "3330f60a-ec83-431f-a67e-28142ab43caa",
  "isAdvanced": false,
  "monday": Object {
    "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
    "breaks": Array [],
    "chairIds": Array [],
    "createdAt": "2017-07-19T00:14:30.932Z",
    "date": "2019-08-08",
    "deletedAt": null,
    "endTime": "1970-02-01T01:00:00.000Z",
    "id": "8f698c5b-d4a2-4550-a6dc-1942e068d930",
    "isClosed": false,
    "pmsId": null,
    "practitionerId": null,
    "startTime": "1970-01-31T16:00:00.000Z",
  },
  "mondayId": "8f698c5b-d4a2-4550-a6dc-1942e068d930",
  "pmsId": null,
  "saturday": null,
  "saturdayId": null,
  "startDate": null,
  "sunday": null,
  "sundayId": null,
  "thursday": null,
  "thursdayId": null,
  "tuesday": null,
  "tuesdayId": null,
  "wednesday": null,
  "wednesdayId": null,
  "weeklySchedules": null,
}
`;

exports[`/api/accounts GET /:accountId/configurations Getting Connector Configs 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of appointment sync",
        "name": "APPOINTMENT_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of patient sync",
        "name": "PATIENT_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of procedure sync",
        "name": "PROCEDURE_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The adapter type",
        "name": "ADAPTER_TYPE",
        "value": null,
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of family sync",
        "name": "FAMILY_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of chair sync",
        "name": "CHAIR_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of practitioner sync",
        "name": "PRACTITIONER_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of practitioner schedule sync",
        "name": "PRACTITIONER_SCHEDULE_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The full sync interval",
        "name": "FULL_SYNC_INTERVAL",
        "value": "300",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The quick sync interval",
        "name": "QUICK_SYNC_INTERVAL",
        "value": "20",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The cache engine",
        "name": "CACHE_ENGINE",
        "value": "REDIS",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Is full sync enabled",
        "name": "FULL_SYNC_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Is quick sync enabled",
        "name": "QUICK_SYNC_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Turns Connector auto update functionality on or off.",
        "name": "AUTO_UPDATE_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Turns bidirectional sync functionality on or off.",
        "name": "BIDIRECTIONAL_SYNC_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of daily schedule sync",
        "name": "DAILY_SCHEDULE_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of patient recall sync",
        "name": "PATIENT_RECALL_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "The default continuing care reasons for hygiene",
        "name": "HYGIENE_TYPES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "The default continuing care reasons for recall",
        "name": "RECALL_TYPES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of statuses that will be used to determine if an Appointment is confirmed",
        "name": "APPOINTMENT_CONFIRMED_STATUSES_READ",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru confirms it",
        "name": "APPOINTMENT_CONFIRMED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru unconfirms it",
        "name": "APPOINTMENT_UNCONFIRMED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of statuses that will be used to determine if an Appointment is missed",
        "name": "APPOINTMENT_MISSED_STATUSES_READ",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru marks it as isMissed=true",
        "name": "APPOINTMENT_MISSED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru marks it as isMissed=false",
        "name": "APPOINTMENT_UNMISSED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of PMS Practitioner Ids whose patients are not synced",
        "name": "IGNORED_PRACTITIONER_PMS_IDS",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom db url that the connector will use.",
        "name": "DB_CONNECTION_URL",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"new patient exam\\" procedure codes",
        "name": "NP_EXAM_PROCEDURE_CODES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of types of the appointments that need to be synced as not bookable",
        "name": "APPOINTMENT_NOT_BOOKABLE_TYPES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Set practitioner to hygienist for hygiene appointments.",
        "name": "SET_HYGIENIST_FOR_HYGIENE_APPOINTMENT",
        "value": "0",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of Eaglesoft API url, integration key, userId and password",
        "name": "EAGLESOFT_API_CONFIGURATION",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "API Hostname configuration. Connector will connect to this hostname",
        "name": "API_HOSTNAME",
        "value": "care.cru:5100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Is connector enabled",
        "name": "CONNECTOR_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of correspondence sync",
        "name": "CORRESPONDENCE_BATCH_SIZE",
        "value": "0",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"hygiene\\" procedure codes",
        "name": "HYGIENE_PROCEDURE_CODES",
        "value": "[\\"111%\\", \\"4342%\\"]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"restorative\\" procedure codes",
        "name": "RESTORATIVE_PROCEDURE_CODES",
        "value": "[\\"2____\\"]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"recall exam\\" procedure codes",
        "name": "RECALL_PROCEDURE_CODES",
        "value": "[\\"00121\\", \\"01202\\"]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "URL",
        "description": "URL to the Twilio function for reminder-voice-unconfirmed robocall",
        "name": "reminder-voice-unconfirmed",
        "value": "https://steady-cows-7130.twil.io/reminder-voice-unconfirmed",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "URL",
        "description": "URL to the Twilio function for reminder-voice-confirmed robocall",
        "name": "reminder-voice-confirmed",
        "value": "https://steady-cows-7130.twil.io/reminder-voice-confirmed",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "URL",
        "description": "URL to the Twilio function for reminder-voice-unconfirmed-family robocall",
        "name": "reminder-voice-unconfirmed-family",
        "value": "https://steady-cows-7130.twil.io/reminder-voice-unconfirmed-family",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "URL",
        "description": "URL to the Twilio function for reminder-voice-confirmed-family robocall",
        "name": "reminder-voice-confirmed-family",
        "value": "https://steady-cows-7130.twil.io/reminder-voice-confirmed-family",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The log verbosity level for the connector logger",
        "name": "LOG_VERBOSITY",
        "value": "DEBUG",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "Time to wait before reporting the first connector down (in minutes)",
        "name": "CONNECTOR_FIRST_DOWN_TIME",
        "value": "90",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Is connector monitoring enabled",
        "name": "MONITORING_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
  ],
}
`;

exports[`/api/accounts GET /:accountId/users should fetch users for the account 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "address": Object {
          "city": null,
          "country": "CA",
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "id": "62954242-3652-4792-bae5-5bfed53d37b7",
          "state": null,
          "street": null,
          "timezone": null,
          "zipCode": null,
        },
        "addressId": "62954242-3652-4792-bae5-5bfed53d37b7",
        "autoRespondOutsideOfficeHoursLimit": null,
        "bookingWidgetPrimaryColor": null,
        "bufferAfterClosing": null,
        "bufferBeforeOpening": null,
        "bumpInterval": "2 weeks",
        "callrailId": null,
        "canAutoRespondOutsideOfficeHours": false,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "cellPhoneNumberFallback": Array [
          "mobilePhoneNumber",
          "otherPhoneNumber",
          "homePhoneNumber",
        ],
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "isChairSchedulingEnabled": false,
        "lastReviewInterval": "1 years",
        "lastSentReviewInterval": "1 months",
        "lastSyncDate": null,
        "logo": null,
        "massOnlineEmailSentDate": null,
        "name": "Test Account",
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "phoneNumber": null,
        "recallBuffer": "1 days",
        "recallEndTime": "20:00:00",
        "recallInterval": "6 months",
        "recallStartTime": "17:00:00",
        "reviewsInterval": "15 minutes",
        "sendRequestEmail": true,
        "sendUnconfirmedReviews": false,
        "suggestedChairId": null,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": "+16043333333",
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
        "weeklyScheduleId": null,
      },
    },
    "permissions": Object {
      "74d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "allowedAccounts": null,
        "canAccessAllAccounts": true,
        "id": "74d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "permissions": null,
        "role": "OWNER",
      },
      "84d4e661-1155-4494-8fdb-c4ec0ddf804d": Object {
        "allowedAccounts": null,
        "canAccessAllAccounts": true,
        "id": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "permissions": null,
        "role": "MANAGER",
      },
    },
    "users": Object {
      "5668f250-e8c9-46e3-bfff-0249f1eec6b8": Object {
        "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "avatarUrl": null,
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "firstName": "Harvey",
        "id": "5668f250-e8c9-46e3-bfff-0249f1eec6b8",
        "lastName": "Dentest",
        "permission": "74d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "permissionId": "74d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "sendBookingRequestEmail": true,
        "username": "owner@test.com",
      },
      "6668f250-e8c9-46e3-bfff-0249f1eec6b8": Object {
        "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "avatarUrl": null,
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "firstName": "Harvey",
        "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
        "lastName": "Dentest",
        "permission": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
        "sendBookingRequestEmail": true,
        "username": "manager@test.com",
      },
    },
  },
  "result": Array [
    "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
    "5668f250-e8c9-46e3-bfff-0249f1eec6b8",
  ],
}
`;

exports[`/api/accounts GET /configurations Getting Connector Configs 1`] = `
Object {
  "data": Array [
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of appointment sync",
        "name": "APPOINTMENT_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of patient sync",
        "name": "PATIENT_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of procedure sync",
        "name": "PROCEDURE_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The adapter type",
        "name": "ADAPTER_TYPE",
        "value": null,
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of family sync",
        "name": "FAMILY_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of chair sync",
        "name": "CHAIR_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of practitioner sync",
        "name": "PRACTITIONER_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of practitioner schedule sync",
        "name": "PRACTITIONER_SCHEDULE_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The full sync interval",
        "name": "FULL_SYNC_INTERVAL",
        "value": "300",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The quick sync interval",
        "name": "QUICK_SYNC_INTERVAL",
        "value": "20",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The cache engine",
        "name": "CACHE_ENGINE",
        "value": "REDIS",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Is full sync enabled",
        "name": "FULL_SYNC_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Is quick sync enabled",
        "name": "QUICK_SYNC_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Turns Connector auto update functionality on or off.",
        "name": "AUTO_UPDATE_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Turns bidirectional sync functionality on or off.",
        "name": "BIDIRECTIONAL_SYNC_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of daily schedule sync",
        "name": "DAILY_SCHEDULE_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of patient recall sync",
        "name": "PATIENT_RECALL_BATCH_SIZE",
        "value": "100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "The default continuing care reasons for hygiene",
        "name": "HYGIENE_TYPES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "The default continuing care reasons for recall",
        "name": "RECALL_TYPES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of statuses that will be used to determine if an Appointment is confirmed",
        "name": "APPOINTMENT_CONFIRMED_STATUSES_READ",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru confirms it",
        "name": "APPOINTMENT_CONFIRMED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru unconfirms it",
        "name": "APPOINTMENT_UNCONFIRMED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of statuses that will be used to determine if an Appointment is missed",
        "name": "APPOINTMENT_MISSED_STATUSES_READ",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru marks it as isMissed=true",
        "name": "APPOINTMENT_MISSED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom status that will be set on an Appointment when CareCru marks it as isMissed=false",
        "name": "APPOINTMENT_UNMISSED_STATUS_WRITE",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of PMS Practitioner Ids whose patients are not synced",
        "name": "IGNORED_PRACTITIONER_PMS_IDS",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The custom db url that the connector will use.",
        "name": "DB_CONNECTION_URL",
        "value": "",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"new patient exam\\" procedure codes",
        "name": "NP_EXAM_PROCEDURE_CODES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of types of the appointments that need to be synced as not bookable",
        "name": "APPOINTMENT_NOT_BOOKABLE_TYPES",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Set practitioner to hygienist for hygiene appointments.",
        "name": "SET_HYGIENIST_FOR_HYGIENE_APPOINTMENT",
        "value": "0",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of Eaglesoft API url, integration key, userId and password",
        "name": "EAGLESOFT_API_CONFIGURATION",
        "value": "[]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "API Hostname configuration. Connector will connect to this hostname",
        "name": "API_HOSTNAME",
        "value": "care.cru:5100",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Is connector enabled",
        "name": "CONNECTOR_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "The batch size of correspondence sync",
        "name": "CORRESPONDENCE_BATCH_SIZE",
        "value": "0",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"hygiene\\" procedure codes",
        "name": "HYGIENE_PROCEDURE_CODES",
        "value": "[\\"111%\\", \\"4342%\\"]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"restorative\\" procedure codes",
        "name": "RESTORATIVE_PROCEDURE_CODES",
        "value": "[\\"2____\\"]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "json",
        "description": "A json array of \\"recall exam\\" procedure codes",
        "name": "RECALL_PROCEDURE_CODES",
        "value": "[\\"00121\\", \\"01202\\"]",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "URL",
        "description": "URL to the Twilio function for reminder-voice-unconfirmed robocall",
        "name": "reminder-voice-unconfirmed",
        "value": "https://steady-cows-7130.twil.io/reminder-voice-unconfirmed",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "URL",
        "description": "URL to the Twilio function for reminder-voice-confirmed robocall",
        "name": "reminder-voice-confirmed",
        "value": "https://steady-cows-7130.twil.io/reminder-voice-confirmed",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "URL",
        "description": "URL to the Twilio function for reminder-voice-unconfirmed-family robocall",
        "name": "reminder-voice-unconfirmed-family",
        "value": "https://steady-cows-7130.twil.io/reminder-voice-unconfirmed-family",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "URL",
        "description": "URL to the Twilio function for reminder-voice-confirmed-family robocall",
        "name": "reminder-voice-confirmed-family",
        "value": "https://steady-cows-7130.twil.io/reminder-voice-confirmed-family",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "string",
        "description": "The log verbosity level for the connector logger",
        "name": "LOG_VERBOSITY",
        "value": "DEBUG",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "integer",
        "description": "Time to wait before reporting the first connector down (in minutes)",
        "name": "CONNECTOR_FIRST_DOWN_TIME",
        "value": "90",
      },
      "type": "configuration",
    },
    Object {
      "attributes": Object {
        "dataType": "boolean",
        "description": "Is connector monitoring enabled",
        "name": "MONITORING_ENABLED",
        "value": "1",
      },
      "type": "configuration",
    },
  ],
}
`;

exports[`/api/accounts POST /:accountId/OfficeHour when office hour does not exist 1`] = `
Object {
  "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "createdAt": "2017-07-19T00:14:30.932Z",
  "deletedAt": null,
  "fridayId": null,
  "id": "99954241-3652-4792-bae5-5bfed53d37b7",
  "isAdvanced": false,
  "monday": Object {
    "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
    "breaks": Array [
      Object {
        "endTime": "1970-01-31T21:00:00.000Z",
        "startTime": "1970-01-31T20:00:00.000Z",
      },
      Object {
        "endTime": "1970-02-01T00:00:00.000Z",
        "startTime": "1970-01-31T23:00:00.000Z",
      },
    ],
    "chairIds": Array [],
    "createdAt": "2017-07-19T00:14:30.932Z",
    "date": "2018-08-02",
    "deletedAt": null,
    "endTime": "1970-02-01T01:00:00.000Z",
    "id": "88954241-3652-4792-bae5-5bfed53d37b7",
    "isClosed": false,
    "pmsId": null,
    "practitionerId": null,
    "startTime": "1970-01-31T16:00:00.000Z",
  },
  "mondayId": "88954241-3652-4792-bae5-5bfed53d37b7",
  "pmsId": null,
  "saturdayId": null,
  "startDate": null,
  "sundayId": null,
  "thursdayId": null,
  "tuesdayId": null,
  "wednesdayId": null,
  "weeklySchedules": null,
}
`;

exports[`/api/accounts POST /:accountId/OfficeHour when office hour does not exist 2`] = `
Object {
  "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "createdAt": "2017-07-19T00:14:30.932Z",
  "deletedAt": null,
  "fridayId": null,
  "id": "99954241-3652-4792-bae5-5bfed53d37b7",
  "isAdvanced": false,
  "monday": Object {
    "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
    "breaks": Array [
      Object {
        "endTime": "1970-01-31T21:00:00.000Z",
        "startTime": "1970-01-31T20:00:00.000Z",
      },
      Object {
        "endTime": "1970-02-01T00:00:00.000Z",
        "startTime": "1970-01-31T23:00:00.000Z",
      },
    ],
    "chairIds": Array [],
    "createdAt": "2017-07-19T00:14:30.932Z",
    "date": "2018-08-02",
    "deletedAt": null,
    "endTime": "1970-02-01T01:00:00.000Z",
    "id": "88954241-3652-4792-bae5-5bfed53d37b7",
    "isClosed": false,
    "pmsId": null,
    "practitionerId": null,
    "startTime": "1970-01-31T16:00:00.000Z",
  },
  "mondayId": "88954241-3652-4792-bae5-5bfed53d37b7",
  "pmsId": null,
  "saturdayId": null,
  "startDate": null,
  "sundayId": null,
  "thursdayId": null,
  "tuesdayId": null,
  "wednesdayId": null,
  "weeklySchedules": null,
}
`;

exports[`/api/accounts POST /:accountId/newUser should create and return the user 1`] = `
Object {
  "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "avatarUrl": null,
  "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
  "firstName": "New",
  "id": "72954241-3652-4792-bae5-5bfed53d37b7",
  "lastName": "Guy",
  "sendBookingRequestEmail": true,
  "username": "newguy@test.com",
}
`;

exports[`/api/accounts PUT /:accountId/OfficeHour when office hour exists 1`] = `
Object {
  "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "createdAt": "2017-07-19T00:14:30.932Z",
  "deletedAt": null,
  "entities": Object {},
  "friday": null,
  "fridayId": null,
  "id": "3330f60a-ec83-431f-a67e-28142ab43caa",
  "isAdvanced": false,
  "monday": Object {
    "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
    "breaks": Array [
      Object {
        "endTime": "1970-01-31T21:00:00.000Z",
        "startTime": "1970-01-31T20:00:00.000Z",
      },
      Object {
        "endTime": "1970-02-01T00:00:00.000Z",
        "startTime": "1970-01-31T23:00:00.000Z",
      },
    ],
    "chairIds": Array [],
    "createdAt": "2017-07-19T00:14:30.932Z",
    "date": "2018-08-02",
    "deletedAt": null,
    "endTime": "1970-02-01T01:00:00.000Z",
    "id": "88954241-3652-4792-bae5-5bfed53d37b7",
    "isClosed": false,
    "pmsId": null,
    "practitionerId": null,
    "startTime": "1970-01-31T16:00:00.000Z",
  },
  "mondayId": "88954241-3652-4792-bae5-5bfed53d37b7",
  "pmsId": null,
  "saturday": null,
  "saturdayId": null,
  "startDate": null,
  "sunday": null,
  "sundayId": null,
  "thursday": null,
  "thursdayId": null,
  "tuesday": null,
  "tuesdayId": null,
  "wednesday": null,
  "wednesdayId": null,
  "weeklySchedules": null,
}
`;

exports[`/api/accounts PUT /:accountId/OfficeHour when office hour exists 2`] = `
Object {
  "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
  "createdAt": "2017-07-19T00:14:30.932Z",
  "deletedAt": null,
  "entities": Object {},
  "friday": null,
  "fridayId": null,
  "id": "3330f60a-ec83-431f-a67e-28142ab43caa",
  "isAdvanced": false,
  "monday": Object {
    "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
    "breaks": Array [
      Object {
        "endTime": "1970-01-31T21:00:00.000Z",
        "startTime": "1970-01-31T20:00:00.000Z",
      },
      Object {
        "endTime": "1970-02-01T00:00:00.000Z",
        "startTime": "1970-01-31T23:00:00.000Z",
      },
    ],
    "chairIds": Array [],
    "createdAt": "2017-07-19T00:14:30.932Z",
    "date": "2018-08-02",
    "deletedAt": null,
    "endTime": "1970-02-01T01:00:00.000Z",
    "id": "88954241-3652-4792-bae5-5bfed53d37b7",
    "isClosed": false,
    "pmsId": null,
    "practitionerId": null,
    "startTime": "1970-01-31T16:00:00.000Z",
  },
  "mondayId": "88954241-3652-4792-bae5-5bfed53d37b7",
  "pmsId": null,
  "saturday": null,
  "saturdayId": null,
  "startDate": null,
  "sunday": null,
  "sundayId": null,
  "thursday": null,
  "thursdayId": null,
  "tuesday": null,
  "tuesdayId": null,
  "wednesday": null,
  "wednesdayId": null,
  "weeklySchedules": null,
}
`;

exports[`/api/accounts PUT /:accountId/configurations Changing Connector Configs 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "dataType": "integer",
      "description": "The quick sync interval",
      "name": "QUICK_SYNC_INTERVAL",
      "value": "30",
    },
    "type": "configuration",
  },
}
`;

exports[`/api/accounts PUT /:accoutId should update the account 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "address": "62954242-3652-4792-bae5-5bfed53d37b7",
        "addressId": "62954242-3652-4792-bae5-5bfed53d37b7",
        "autoRespondOutsideOfficeHoursLimit": null,
        "bookingWidgetPrimaryColor": null,
        "bufferAfterClosing": null,
        "bufferBeforeOpening": null,
        "bumpInterval": "2 weeks",
        "callrailId": null,
        "canAutoRespondOutsideOfficeHours": false,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "cellPhoneNumberFallback": Array [
          "mobilePhoneNumber",
          "otherPhoneNumber",
          "homePhoneNumber",
        ],
        "clinicName": null,
        "contactEmail": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "facebookUrl": null,
        "fullLogoUrl": null,
        "googlePlaceId": null,
        "hygieneInterval": "6 months",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "isChairSchedulingEnabled": false,
        "lastReviewInterval": "1 years",
        "lastSentReviewInterval": "1 months",
        "lastSyncDate": null,
        "logo": null,
        "massOnlineEmailSentDate": null,
        "name": "Test That Thang",
        "omitChairIds": Array [],
        "omitPractitionerIds": Array [],
        "phoneNumber": null,
        "recallBuffer": "1 days",
        "recallEndTime": "20:00:00",
        "recallInterval": "6 months",
        "recallStartTime": "17:00:00",
        "reviewsInterval": "15 minutes",
        "sendRequestEmail": true,
        "sendUnconfirmedReviews": false,
        "suggestedChairId": null,
        "syncClientAdapter": null,
        "timeInterval": 30,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": "+16043333333",
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "vendastaMsId": null,
        "vendastaSrId": null,
        "website": null,
        "weeklyScheduleId": null,
      },
    },
    "addresses": Object {
      "62954242-3652-4792-bae5-5bfed53d37b7": Object {
        "city": null,
        "country": "CA",
        "id": "62954242-3652-4792-bae5-5bfed53d37b7",
        "state": null,
        "street": null,
        "timezone": null,
        "zipCode": null,
      },
    },
  },
  "result": "62954241-3652-4792-bae5-5bfed53d37b7",
}
`;

exports[`/api/accounts PUT /configurations Changing Connector Configs 1`] = `
Object {
  "data": Object {
    "attributes": Object {
      "dataType": "integer",
      "description": "The quick sync interval",
      "name": "QUICK_SYNC_INTERVAL",
      "value": "30",
    },
    "type": "configuration",
  },
}
`;

exports[`/api/chats DELETE / /:chatId - delete chat 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/chats GET / / - get chats 1`] = `
Object {
  "entities": Object {
    "chats": Object {
      "3180a744-f6b0-4a09-8046-4e713bf5b565": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "hasUnread": false,
        "id": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "isFlagged": false,
        "lastTextMessageDate": "2017-07-22T00:14:30.932Z",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientPhoneNumber": "+16045555555",
      },
    },
  },
  "result": Array [
    "3180a744-f6b0-4a09-8046-4e713bf5b565",
  ],
}
`;

exports[`/api/chats GET / /:chatId - retrieve chat 1`] = `
Object {
  "entities": Object {
    "chats": Object {
      "3180a744-f6b0-4a09-8046-4e713bf5b565": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "hasUnread": false,
        "id": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "isFlagged": false,
        "lastTextMessageDate": "2017-07-22T00:14:30.932Z",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientPhoneNumber": "+16045555555",
      },
    },
  },
  "result": "3180a744-f6b0-4a09-8046-4e713bf5b565",
}
`;

exports[`/api/chats GET / /:chatId/textMessages - offset and limiting returns correct messages 1`] = `
Object {
  "entities": Object {
    "textMessages": Object {
      "059987cb-3051-4656-98d0-72cda34d32a6": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a6",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": false,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": true,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
    },
  },
  "result": Array [
    "059987cb-3051-4656-98d0-72cda34d32a6",
  ],
  "total": 2,
}
`;

exports[`/api/chats GET / /:chatId/textMessages - retrieve text messages for a chat 1`] = `
Object {
  "entities": Object {
    "textMessages": Object {
      "059987cb-3051-4656-98d0-72cda34d32a1": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message, latest",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a1",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": false,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": true,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
      "059987cb-3051-4656-98d0-72cda34d32a6": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a6",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": false,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": true,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
    },
  },
  "result": Array [
    "059987cb-3051-4656-98d0-72cda34d32a1",
    "059987cb-3051-4656-98d0-72cda34d32a6",
  ],
  "total": 2,
}
`;

exports[`/api/chats GET / /patient/:patientId - return chat with patient 1`] = `
Object {
  "entities": Object {
    "chats": Object {
      "3180a744-f6b0-4a09-8046-4e713bf5b565": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "hasUnread": false,
        "id": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "isFlagged": false,
        "lastTextMessageDate": "2017-07-22T00:14:30.932Z",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientPhoneNumber": "+16045555555",
        "textMessages": Array [
          "059987cb-3051-4656-98d0-72cda34d32a6",
          "059987cb-3051-4656-98d0-72cda34d32a1",
        ],
      },
    },
    "textMessages": Object {
      "059987cb-3051-4656-98d0-72cda34d32a1": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message, latest",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a1",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": false,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": true,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
      "059987cb-3051-4656-98d0-72cda34d32a6": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a6",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": false,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": true,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
    },
  },
  "result": "3180a744-f6b0-4a09-8046-4e713bf5b565",
}
`;

exports[`/api/chats PUT / /:_chatId/textMessages/read - set all of chats unread text messages to read 1`] = `
Object {
  "entities": Object {
    "chats": Object {
      "3180a744-f6b0-4a09-8046-4e713bf5b565": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "hasUnread": false,
        "id": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "isFlagged": false,
        "lastTextMessageDate": "2017-07-22T00:14:30.932Z",
        "lastTextMessageId": null,
        "patient": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientPhoneNumber": "+16045555555",
        "textMessages": Array [
          "059987cb-3051-4656-98d0-72cda34d32a1",
          "059987cb-3051-4656-98d0-72cda34d32a6",
        ],
      },
    },
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "address": null,
        "avatarUrl": null,
        "birthDate": "1980-01-01T00:00:00.932Z",
        "cellPhoneNumber": "+17789999999",
        "contCareInterval": null,
        "contactMethodNote": null,
        "dueForHygieneDate": null,
        "dueForRecallExamDate": null,
        "email": "testpatient@test.com",
        "familyId": "b35bee92-e86d-4084-87d8-add21a1ba0f6",
        "firstApptDate": null,
        "firstApptId": null,
        "firstName": "Ronald",
        "gender": null,
        "homePhoneNumber": null,
        "hygienePendingAppointmentId": null,
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "insurance": null,
        "insuranceInterval": null,
        "isDeleted": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "language": null,
        "lastApptDate": null,
        "lastApptId": null,
        "lastHygieneApptId": null,
        "lastHygieneDate": null,
        "lastName": "Mcdonald",
        "lastRecallApptId": null,
        "lastRecallDate": null,
        "lastRestorativeApptId": null,
        "lastRestorativeDate": null,
        "middleName": null,
        "mobilePhoneNumber": "+17789999999",
        "nextApptDate": null,
        "nextApptId": null,
        "omitRecallIds": Array [],
        "omitReminderIds": Array [],
        "otherPhoneNumber": null,
        "patientUserId": null,
        "phoneNumber": null,
        "pmsCreatedAt": null,
        "pmsId": "12",
        "prefContactPhone": null,
        "prefName": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "recalls": true,
          "referrals": true,
          "reminders": true,
          "reviews": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "recallPendingAppointmentId": null,
        "status": "Active",
        "type": null,
        "workPhoneNumber": null,
      },
    },
    "textMessages": Object {
      "059987cb-3051-4656-98d0-72cda34d32a1": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message, latest",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a1",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": true,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": true,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
      "059987cb-3051-4656-98d0-72cda34d32a6": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a6",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": true,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": true,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
    },
  },
  "result": "3180a744-f6b0-4a09-8046-4e713bf5b565",
}
`;
